--- a/Two.ConsoleApp1/Two.ConsoleApp1.csproj
+++ b/Two.ConsoleApp1/Two.ConsoleApp1.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Refit" Version="10.0.1" />
     <PackageReference Include="RestSharp" Version="113.1.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 
