--- a/five.WebApi/appsettings.json
+++ b/five.WebApi/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbConnection": "Data Source=.;Initial Catalog=KSLH_01;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True"
-  }
+  },
+  "api": "https://dummyjson.com"
 }
