--- a/five.WebApi/five.WebApi.csproj
+++ b/five.WebApi/five.WebApi.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="Refit" Version="10.0.1" />
+    <PackageReference Include="RestSharp" Version="113.1.0" />
+    <PackageReference Include="Shard.WebsiteScraper" Version="1.2.1" />
   </ItemGroup>
 
   <ItemGroup>
